--- a/REWORK/src/stylesheet/index/index.css
+++ b/REWORK/src/stylesheet/index/index.css
@@ -108,27 +108,35 @@ html body .big-title {
   font-weight: normal;
 }
 html body .medium-form {
-  width: 195px;
-  height: 34px;
+  width: 210px;
+  height: 30px;
 }
 html body .big-form {
-  width: 445px;
-  height: 34px;
+  width: 460px;
+  height: 30px;
 }
 html body .medium-form, html body .big-form {
   padding-left: 5px;
   font-size: var(--small-text);
+  background-color: #fefefefe;
   border: none;
-  border-bottom: 1.5px solid #C0C0C0;
-  background-color: #EEEEEE;
-  -webkit-transition: 0.2s ease-out;
-  transition: 0.2s ease-out;
+  border: 1px solid #ebebeb;
+  border-bottom: 1.5px solid #757575;
+  border-radius: 5px;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 html body .medium-form:hover, html body .big-form:hover {
-  background-color: #E7E7E7;
-  border-bottom-color: #444444;
-  -webkit-transition: 0.2s ease-out;
-  transition: 0.2s ease-out;
+  background-color: #ffffff;
+  border-bottom: 1.5px solid #005FB8;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+html body .medium-form:focus, html body .big-form:focus {
+  background-color: #ffffff;
+  border-bottom: 1.5px solid #005FB8;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 html body .help {
   width: 12px;
@@ -260,7 +268,16 @@ html body main #login-data input {
   margin-top: -8px;
 }
 html body main #login-data #password {
-  margin-left: 47px;
+  margin-left: 39px;
+}
+html body main #login-data #password #togglePW {
+  width: 12px;
+  height: auto;
+  cursor: pointer;
+  background: url("/src/img/icons/eye.png");
+}
+html body main #login-data #password #toggle {
+  display: none;
 }
 html body main #additional-settings {
   padding-top: 20px;
@@ -369,30 +386,73 @@ html body main #start-stop {
   margin-top: 1px;
 }
 html body main #start-stop #start button, html body main #start-stop #stop button {
-  width: 100px;
-  height: 35px;
-  border: 1px solid var(--text-color);
+  width: 120px;
+  height: 32px;
   cursor: pointer;
 }
 html body main #start-stop #start-btn {
+  position: relative;
   margin-right: 30px;
-  background: #CBFFD0;
+  color: #fff;
+  background: #005FB8;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  background-clip: padding-box;
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
+html body main #start-stop #start-btn::after {
+  position: absolute;
+  top: -1px;
+  bottom: -1px;
+  left: -1px;
+  right: -1px;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(90%, #0069B8), to(#013681));
+  background: linear-gradient(180deg, #0069B8 90%, #013681 100%);
+  content: "";
+  z-index: -1;
+  border-radius: 5px;
+}
 html body main #start-stop #start-btn:hover {
-  background: #c4f5c9;
+  background-color: #016dd1;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+html body main #start-stop #start-btn:active {
+  background-color: #0076e4;
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main #start-stop #stop-btn {
+  position: relative;
   margin-left: 30px;
-  background: #ffcbcb;
+  color: #000;
+  background: #fefefe;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  background-clip: padding-box;
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
+html body main #start-stop #stop-btn::after {
+  position: absolute;
+  top: -1px;
+  bottom: -1px;
+  left: -1px;
+  right: -1px;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(90%, #e9e9e9), to(#d3d3d3));
+  background: linear-gradient(180deg, #e9e9e9 90%, #d3d3d3 100%);
+  content: "";
+  z-index: -1;
+  border-radius: 5px;
+}
 html body main #start-stop #stop-btn:hover {
-  background: #f5c3c3;
+  background-color: #f7f7f7;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+html body main #start-stop #stop-btn:active {
+  background-color: #eeeeee;
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
