--- a/REWORK/src/stylesheet/index/index.scss
+++ b/REWORK/src/stylesheet/index/index.scss
@@ -87,25 +87,32 @@ html {
     }
     
     .medium-form {
-      width: 195px;
-      height: 34px;
+      width: 210px;
+      height: 30px;
     }
     .big-form {
-      width: 445px;
-      height: 34px;
+      width: 460px;
+      height: 30px;
     }
 
     .medium-form, .big-form {
       padding-left: 5px;
       font-size: var(--small-text);
+      background-color: #fefefefe;
       border: none;
-      border-bottom: 1.5px solid #C0C0C0;
-      background-color: #EEEEEE;
-      transition: .2s ease-out;
+      border: 1px solid #ebebeb;
+      border-bottom: 1.5px solid #757575;
+      border-radius: 5px;
+      transition: .2s;
       &:hover {
-        background-color: #E7E7E7;
-        border-bottom-color: #444444;
-        transition: .2s ease-out;
+        background-color: #ffffff;
+        border-bottom: 1.5px solid #005FB8;
+        transition: .2s;
+      }
+      &:focus {
+        background-color: #ffffff;
+        border-bottom: 1.5px solid #005FB8;
+        transition: .2s;
       }
     }
 
@@ -236,7 +243,16 @@ html {
           margin-top: -8px;
         }
         #password {
-          margin-left: 47px;
+          margin-left: 39px;
+          #togglePW {
+            width: 12px;
+            height: auto;
+            cursor: pointer;
+            background: url('/src/img/icons/eye.png');
+          }
+          #toggle {
+            display: none;
+          }
         }
       }
       #additional-settings {
@@ -305,26 +321,61 @@ html {
         align-items: center;
         margin-top: 1px;
         #start button, #stop button {
-          width: 100px;
-          height: 35px;
-          border: 1px solid var(--text-color);
+          width: 120px;
+          height: 32px;
           cursor: pointer;
         }
         #start-btn {
+          position: relative;
           margin-right: 30px;
-          background: #CBFFD0;
+          color: #fff;
+          background: #005FB8;
+          border: 1px solid transparent;
+          border-radius: 5px;
+          background-clip: padding-box;
           transition: .2s;
+          &::after {
+            position: absolute;
+            top: -1px; bottom: -1px;
+            left: -1px; right: -1px;
+            background: linear-gradient(180deg, #0069B8 90%, #013681 100%);
+            content: '';
+            z-index: -1;
+            border-radius: 5px;
+          }
           &:hover {
-            background: #c4f5c9;
+            background-color: #016dd1;
+            transition: .2s;
+          }
+          &:active {
+            background-color: #0076e4;
             transition: .2s;
           }
         }
         #stop-btn {
+          position: relative;
           margin-left: 30px;
-          background: #ffcbcb;
+          color: #000;
+          background: rgb(254, 254, 254);
+          border: 1px solid transparent;
+          border-radius: 5px;
+          background-clip: padding-box;
           transition: .2s;
+          &::after {
+            position: absolute;
+            top: -1px; bottom: -1px;
+            left: -1px; right: -1px;
+            background: linear-gradient(180deg, #e9e9e9 90%, #d3d3d3 100%);
+            content: '';
+            z-index: -1;
+            border-radius: 5px;
+          }
           &:hover {
-            background: #f5c3c3;
+            background-color: rgb(247, 247, 247);
+            transition: .2s;
+          }
+          &:active {
+            background-color: rgb(238, 238, 238);
             transition: .2s;
           }
         }
